backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app
spec:
  ports:
    - name: backend
      port: 8081            # Порт сервиса
      targetPort: 80        # Порт Nginx
  selector:
    app: backend
