cache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
spec:
  ports:
    - name: cache
      port: 8082            # Порт сервиса
      targetPort: 80        # Порт Nginx
  selector:
    app: cache
